# snowflake-cli-nextflow

./: LICENSE  README.md  pyproject.toml
src/snowflakecli/nextflow/: commands.py  manager.py  plugin_spec.py  service_spec.py
src/snowflakecli/nextflow/config/: commands.py
src/snowflakecli/nextflow/util/: cmd_runner.py  websocket_client.py
src/snowflakecli/nextflow/workflow/: commands.py
src/snowflakecli/nextflow/wss/: __init__.py  websocket_client.py  websocket_exceptions.py
